force-app/main/default/objects/SBQQ__OrderItemConsumptionRate__c/SBQQ__OrderItemConsumptionRate__c.object-meta.xml
<CustomObject>
    <label>Order Product Consumption Rate</label>
    <nameField>
        <label>Order Product Consumption Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Product Consumption Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>