force-app/main/default/objects/SBQQ__OrderItemConsumptionRate__c/fields/SBQQ__LowerBound__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LowerBound__c</fullName>
        <inlineHelpText>The lowest quantity of usage for this consumption rate.</inlineHelpText>
        <label>Lower Bound</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>