force-app/main/default/objects/SBQQ__OrderItemConsumptionRate__c/fields/SBQQ__UpperBound__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UpperBound__c</fullName>
        <inlineHelpText>The highest quantity of usage for this consumption rate.</inlineHelpText>
        <label>Upper Bound</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>